POST and GET routes and handlers for user_has_movies collection + New build
