# apps/go-api/docs/swagger.yaml
@@ -130,24 +130,34 @@ definitions:
       name:
         type: string
     type: object
+  types.UserHasMovies:
+    properties:
+      favorited:
+        type: boolean
+      id:
+        type: string
+      liked:
+        type: boolean
+      movie:
+        description: Relation to Movie record
+        type: string
+      rating:
+        type: number
+      review:
+        type: string
+      shared:
+        type: boolean
+      suggested:
+        type: boolean
+      user:
+        description: Relation to User record
+        type: string
+      watched:
+        type: boolean
+    type: object
 info:
   contact: {}
 paths:
-  /example/helloworld:
-    get:
-      consumes:
-      - application/json
-      description: do ping
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: OK
-          schema:
-            type: string
-      summary: ping example
-      tags:
-      - example
   /login:
     get:
       consumes:
@@ -442,6 +452,66 @@ paths:
       summary: Get random popular movies
       tags:
       - TMDB
+  /user/movie/preferences:
+    get:
+      consumes:
+      - application/json
+      description: This API retrieves a user's movie preferences from user_has_movies
+        collection
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully fetched user's movie preferences
+          schema:
+            $ref: '#/definitions/types.UserHasMovies'
+        "400":
+          description: Bad request - No userId or token in session
+          schema:
+            $ref: '#/definitions/types.Error'
+        "500":
+          description: Internal server error - Failed to get user's movie preferences
+          schema:
+            $ref: '#/definitions/types.Error'
+      security:
+      - HTTPOnlySessionCookie: []
+      summary: Get user's movie preferences
+      tags:
+      - User
+    post:
+      consumes:
+      - application/json
+      description: This API creates a new record in the user_has_movies collection
+      parameters:
+      - description: User's movie preferences
+        in: body
+        name: userHasMovies
+        required: true
+        schema:
+          $ref: '#/definitions/types.UserHasMovies'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Successfully created user's movie preferences
+          schema:
+            additionalProperties:
+              type: string
+            type: object
+        "400":
+          description: Bad request - No userId or token in session, Failed to parse
+            request body
+          schema:
+            $ref: '#/definitions/types.Error'
+        "500":
+          description: Internal server error - Failed to update user's movie preferences
+          schema:
+            $ref: '#/definitions/types.Error'
+      security:
+      - HTTPOnlySessionCookie: []
+      summary: Create new user's movie preferences
+      tags:
+      - User
   /whoami:
     get:
       consumes:
