# apps/go-api/internal/handlers/pocketbase_collection.go
@@ -6,14 +6,15 @@ import (
 
 	"github.com/bnema/flem/go-api/pkg/services"
 	"github.com/bnema/flem/go-api/pkg/types"
+	"github.com/mitchellh/mapstructure"
 )
 
-func SaveMovieToPocketbase(app *types.App, movie types.Movie) error {
+func SaveMovieToPocketbase(app *types.App, movie types.Movie) (types.Movie, error) {
 	// Log in as admin to pb and get the token
 	adminAuthResponse, err := services.PBAdminAuth(app)
 	if err != nil {
 		fmt.Println("SaveMovieToPocketbase: Failed to get token", err)
-		return fmt.Errorf("failed to get token: %w", err)
+		return types.Movie{}, fmt.Errorf("failed to get token: %w", err)
 	}
 
 	token := adminAuthResponse.Token
@@ -22,26 +23,27 @@ func SaveMovieToPocketbase(app *types.App, movie types.Movie) error {
 	// Convert the movie to a map[string]interface{} (generic JSON object)
 	jsonData, err := json.Marshal(movie)
 	if err != nil {
-		return fmt.Errorf("failed to marshal movie to json: %w", err)
+		return types.Movie{}, fmt.Errorf("failed to marshal movie to json: %w", err)
 	}
 
 	var item map[string]interface{}
 	err = json.Unmarshal(jsonData, &item)
 	if err != nil {
-		return fmt.Errorf("failed to unmarshal json to item: %w", err)
+		return types.Movie{}, fmt.Errorf("failed to unmarshal json to map[string]interface{}: %w", err)
 	}
 
 	// Save the movie to the collection
 	savedItem, err := services.PBSaveItemToCollection(collectionUrl, token, item)
 	if err != nil {
-		return fmt.Errorf("failed to save movie to collection: %w", err)
+		return types.Movie{}, fmt.Errorf("failed to save movie to collection: %w", err)
 	}
 
 	if savedItem != nil {
 		fmt.Println("Movie saved successfully to the collection. Saved item:")
+		// Assuming PBSaveItemToCollection returns a Movie
+		return savedItem.(types.Movie), nil
 	}
-
-	return nil
+	return types.Movie{}, nil
 }
 
 // CheckIfMovieExistsInCollection checks if a movie exists in the collection
@@ -85,4 +87,73 @@ func CheckIfMovieExistsInCollection(app *types.App, tmdb_id int, lang string) (m
 	fmt.Printf("No movie with tmdb_id %d and language %s found in the collection\n", tmdb_id, lang)
 
 	return nil, nil
+}
+
+// UpdateUserHasMovies updates the user_has_movies collection (app, userId, token, userHasMovies))
+func UpdateUserHasMovies(app *types.App, userId string, token string, userHasMovies types.UserHasMovies) error {
+	collectionUrl := app.UserHasMoviesCollectionURL
+
+	// Adding userId to userHasMovies
+	userHasMovies.User = userId
+
+	// Convert the userHasMovies to a map[string]interface{} (generic JSON object)
+	jsonData, err := json.Marshal(userHasMovies)
+	if err != nil {
+		return fmt.Errorf("failed to marshal userHasMovies to json: %w", err)
+	}
+
+	var item map[string]interface{}
+	err = json.Unmarshal(jsonData, &item)
+	if err != nil {
+		return fmt.Errorf("failed to unmarshal json to map[string]interface{}: %w", err)
+	}
+
+	// Save the userHasMovies to the collection
+	_, err = services.PBSaveItemToCollection(collectionUrl, token, item)
+	if err != nil {
+		return fmt.Errorf("failed to save userHasMovies to collection: %w", err)
+	}
+
+	fmt.Printf("UserHasMovies saved successfully to the collection\n")
+
+	return nil
+}
+
+// GetUserHasMovies gets the user_has_movies collection (app, userId, token, userHasMovies))
+func GetUserHasMovies(app *types.App, userId string, token string) ([]types.UserHasMovies, error) {
+	collectionUrl := app.UserHasMoviesCollectionURL
+	var userHasMoviesCollection []types.UserHasMovies
+
+	// Since the filter on pocketbase is broken we can only pass the userId
+	filterStr := fmt.Sprintf("(User='%s')", userId)
+
+	// Search in the collection if there is a user_has_movies with the same userId
+	searchResponse, err := services.PBGetItemFromCollection(collectionUrl, token, filterStr)
+	if err != nil {
+		return nil, fmt.Errorf("failed to get item from collection: %w", err)
+	}
+
+	if searchResponse != nil && searchResponse.Items != nil {
+		for _, item := range searchResponse.Items {
+			userHasMoviesMap, ok := item.(map[string]interface{})
+			if !ok {
+				return nil, fmt.Errorf("failed to assert userHasMovies to map[string]interface{}: %v", item)
+			}
+
+			var uhm types.UserHasMovies
+			if err := mapstructure.Decode(userHasMoviesMap, &uhm); err != nil {
+				return nil, fmt.Errorf("failed to decode map to UserHasMovies: %v", err)
+			}
+			userHasMoviesCollection = append(userHasMoviesCollection, uhm)
+		}
+	} else {
+		fmt.Printf("No items in the searchResponse or searchResponse is nil\n")
+	}
+
+	if len(userHasMoviesCollection) == 0 {
+		fmt.Printf("No user_has_movies with userId %s found in the collection\n", userId)
+		return nil, nil
+	}
+
+	return userHasMoviesCollection, nil
 }
